# doujin-studio

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: quality.yml
backend/app/: asset_storage.py  assets.py  autofix.py  config.py  database.py  deletion.py  fonts.py  generation_service.py  generator.py  image_backends.py  jobs.py  knowledge.py  layout_engine.py  llm.py  main.py  mutation.py  preflight.py  preflight_geometry.py  project_render_service.py  prompt_composer.py  prompt_normalizer.py  renderer.py  rendering.py  repository.py  schema_geometry.py  schemas.py  story.py  story_characters.py  story_layout.py  story_stage.py  story_stub.py  typeset.py
backend/app/routers/: __init__.py  common.py  generation.py  knowledge.py  projects.py  story.py  system.py
data/knowledge/: README.md
docs/: local-run-troubleshooting.md  mvp.md  quality-roadmap.md  refactoring-plan.md
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/: App.test.tsx  App.tsx  KnowledgePanel.tsx  PageEditor.interactions.test.tsx  PageEditor.test.tsx  PageEditor.tsx  StoryPanel.test.tsx  StoryPanel.tsx  app-utils.ts  editor-geometry.test.ts  editor-geometry.ts  main.tsx  manga-types.ts  page-editor-helpers.test.ts  page-editor-helpers.ts  prompt-preview.test.ts  prompt-preview.ts  styles.css  typeset-layout.test.ts  typeset-layout.ts
frontend/src/api/: types.ts  (+5 more)
scripts/: check.ps1  dev-lib.ps1  dev-up.ps1  export-openapi.py  gpu-free.ps1  start-backend-comfy.ps1  start-comfy-headless.ps1
tests/: conftest.py  dev-lib.Tests.ps1  helpers.py  test_assets.py  test_auto_layout.py  test_autofix.py  test_backend.py  test_frame_points.py  test_generation_jobs.py  test_geometry_helpers.py  test_knowledge.py  test_layout_engine.py  test_llm.py  test_manga_quality.py  test_mutation.py  test_overlay.py  test_phase10.py  test_phase7.py  test_phase7_coverage.py  test_phase8.py  test_phase9.py  test_preflight.py  test_prompt_normalizer.py  test_render_units.py  test_rendering.py  test_schema_validation.py  test_story_generation.py  test_typeset_fixtures.py  test_typesetting.py  test_vram_hook.py
tests/fixtures/: typeset_cases.json
workflows/: default.workflow_api.example.json  regional-attention-couple.workflow_api.example.json
(+4 files in other folders)
