[project]
name = "local-doujin-studio"
version = "0.1.0"
description = "ローカル同人誌制作MVP"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pillow>=10.4.0",
    "pydantic>=2.8.0",
    "sqlalchemy>=2.0.30",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
